--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1091,3 +1091,13 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
    url     = {http://jcgt.org/published/0003/02/01/},
    issn    = {2331-7418}
 }
+
+@book{Abrash:1997:BlackBook,
+ author = {Abrash, Michael},
+ title = {Michael Abrash's Graphics Programming Black Book, with CD: The Complete Works of Graphics Master, Michael Abrash},
+ year = {1997},
+ isbn = {1576101746},
+ edition = {10th},
+ publisher = {Coriolis Group Books},
+ address = {Scottsdale, AZ, USA},
+}
